--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </p>
                     <a href="./article.html" class="btn btn-dark">Read More</a>
                 </div>
-                <div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url(./assets/img/home.jpg);" alt="TopReview homepage image">
+                <div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url(./assets/img/Home.jpg);" alt="TopReview homepage image">
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
     <div class="row">
         <div class="col-lg-6">
             <div class="card border-0 mb-4 box-shadow h-xl-300">
-                <div style="background-image: url(./assets/img/airbuds.jpg); min-height: 250px; background-position: center; background-size: cover; margin-top: -5%; background-repeat: no-repeat;" alt="2024 Best AirBuds image"></div>
+                <div style="background-image: url(./assets/img/air buds.jpg); min-height: 250px; background-position: center; background-size: cover; margin-top: -5%; background-repeat: no-repeat;" alt="2024 Best AirBuds image"></div>
                 <div class="card-body px-0 pb-0 d-flex flex-column align-items-start">
                     <h2 class="h4 font-weight-bold">
                         <a class="text-dark" href="./article.html">2024 Best AirBuds</a>
@@ -98,7 +98,7 @@
         <div class="col-lg-6">
             <div class="flex-md-row mb-4 box-shadow h-xl-300">
                 <div class="mb-3 d-flex align-items-center">
-                    <img height="80" src="./assets/img/smartphone.jpg" alt="2024 best Smart Phone image">
+                    <img height="80" src="./assets/img/smart phone.jpg" alt="2024 best Smart Phone image">
                     <div class="pl-3">
                         <h2 class="mb-2 h6 font-weight-bold">
                             <a class="text-dark" href="./article.html">2024 Best Smart Phone | Mobile</a>
@@ -108,7 +108,7 @@
                     </div>
                 </div>
                 <div class="mb-3 d-flex align-items-center">
-                    <img height="80" src="./assets/img/bestlaptops.jpg" alt="Best budget laptop image">
+                    <img height="80" src="./assets/img/best laptops.jpg" alt="Best budget laptop image">
                     <div class="pl-3">
                         <h2 class="mb-2 h6 font-weight-bold">
                             <a class="text-dark" href="./article.html">Best Budget Laptop Of The Year</a>
@@ -118,7 +118,7 @@
                     </div>
                 </div>
                 <div class="mb-3 d-flex align-items-center">
-                    <img height="80" src="./assets/img/fashion.jpg" alt="Top latest fashion products image">
+                    <img height="80" src="./assets/img/faction.jpg" alt="Top latest fashion products image">
                     <div class="pl-3">
                         <h2 class="mb-2 h6 font-weight-bold">
                             <a class="text-dark" href="./article.html">Top Latest Fashion Products You Need to Know</a>
