--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
                     <a class="nav-link" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./article.html">Blog</a>
+                    <a class="nav-link" href="">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./article.html">Tech</a>
+                    <a class="nav-link" href="">Tech</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./article.html">Compared</a>
+                    <a class="nav-link" href="">Compared</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./article.html">Health</a>
+                    <a class="nav-link" href="">Health</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./article.html">Collections</a>
+                    <a class="nav-link" href="">Collections</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./about.html">About</a>
