--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div style="background-image: url(./assets/img/air buds.jpg); min-height: 250px; background-position: center; background-size: cover; margin-top: -5%; background-repeat: no-repeat;" alt="2024 Best AirBuds image"></div>
                 <div class="card-body px-0 pb-0 d-flex flex-column align-items-start">
                     <h2 class="h4 font-weight-bold">
-                        <a class="text-dark" href="./article.html">2024 Best AirBuds</a>
+                        <a class="text-dark" href="">2024 Best AirBuds</a>
                     </h2>
                     <p class="card-text">Researchers have found the best Airbuds of the year with improved sound quality and features.</p>
                 </div>
