--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@ HEADER
 					</p>
 				</div>
 				<div class="col-md-6 pr-0">
-					<img src="./assets/img/topReviewAboutPic.png" class="shadow" alt="TopReview Blog">
+					<img src="./assets/img/topReviewAboutPic.jpg" class="shadow" alt="TopReview Blog">
 				</div>
 			</div>
 		</div>
