--- a/contact.html
+++ b/contact.html
@@ -105,16 +105,16 @@
             <h2 class="h4 font-weight-bold">Contact Details</h2>
             <p>
                 <strong>Address:</strong><br>
-                1234 Review Lane<br>
-                Review City, RC 56789
+                786 lane G13<br>
+                Islamabad.
             </p>
             <p>
                 <strong>Email:</strong><br>
-                <a href="mailto:contact@topreview.com">contact@topreview.com</a>
+                <a href="mailto:topreviewhelp@gmail.com">topreviewhelp@gmail.com</a>
             </p>
             <p>
                 <strong>Phone:</strong><br>
-                (123) 456-7890
+                +923287618199
             </p>
         </div>
     </div>
