--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./about.html">About</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./privacyPolicy.html">Privacy Policy</a>
+                </li>
             </ul>
             <ul class="navbar-nav ml-auto d-flex align-items-center">
                 <li class="nav-item highlight">
