--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Top Review provides quality and unbiased reviews of various products, backed by AI-driven research and real data." />
     <meta name="keywords" content="product reviews, top reviews, unbiased reviews, tech reviews, health product reviews" />
     <meta name="author" content="Mr. Rocky" />
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport'/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Source+Sans+Pro:400,600,700" rel="stylesheet">
@@ -79,7 +79,7 @@
                     </p>
                     <a href="./article.html" class="btn btn-dark">Read More</a>
                 </div>
-                <div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url(./assets/img/Home.jpg);" alt="TopReview homepage image">
+                <div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url(./assets/img/Home.jpg);" srcset="image-medium.jpg 768w, image-large.jpg 1200w" sizes="(max-width: 768px) 100vw, 50vw"  alt="TopReview homepage image">
                 </div>
             </div>
         </div>
@@ -92,7 +92,7 @@
     <div class="row">
         <div class="col-lg-6">
             <div class="card border-0 mb-4 box-shadow h-xl-300">
-                <div style="background-image: url(./assets/img/air buds.jpg); min-height: 250px; background-position: center; background-size: cover; margin-top: -5%; background-repeat: no-repeat;" alt="2024 Best AirBuds image"></div>
+                <div style="background-image: url(./assets/img/air buds.jpg); srcset="image-medium.jpg 768w, image-large.jpg 1200w" sizes="(max-width: 768px) 100vw, 50vw" min-height: 250px; background-position: center; background-size: cover; margin-top: -5%; background-repeat: no-repeat;" alt="2024 Best AirBuds image"></div>
                 <div class="card-body px-0 pb-0 d-flex flex-column align-items-start">
                     <h2 class="h4 font-weight-bold">
                         <a class="text-dark" href="">2024 Best AirBuds</a>
@@ -104,7 +104,7 @@
         <div class="col-lg-6">
             <div class="flex-md-row mb-4 box-shadow h-xl-300">
                 <div class="mb-3 d-flex align-items-center">
-                    <img height="80" src="./assets/img/smart phone.jpg" alt="2024 best Smart Phone image">
+                    <img height="80" src="./assets/img/smart phone.jpg" srcset="image-medium.jpg 768w, image-large.jpg 1200w" sizes="(max-width: 768px) 100vw, 50vw" alt="2024 best Smart Phone image">
                     <div class="pl-3">
                         <h2 class="mb-2 h6 font-weight-bold">
                             <a class="text-dark" href="./article.html">2024 Best Smart Phone | Mobile</a>
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="mb-3 d-flex align-items-center">
-                    <img height="80" src="./assets/img/best laptops.jpg" alt="Best budget laptop image">
+                    <img height="80" src="./assets/img/best laptops.jpg" srcset="image-medium.jpg 768w, image-large.jpg 1200w" sizes="(max-width: 768px) 100vw, 50vw" alt="Best budget laptop image">
                     <div class="pl-3">
                         <h2 class="mb-2 h6 font-weight-bold">
                             <a class="text-dark" href="./article.html">Best Budget Laptop Of The Year</a>
@@ -124,7 +124,7 @@
                     </div>
                 </div>
                 <div class="mb-3 d-flex align-items-center">
-                    <img height="80" src="./assets/img/faction.jpg" alt="Top latest fashion products image">
+                    <img height="80" src="./assets/img/faction.jpg" srcset="image-medium.jpg 768w, image-large.jpg 1200w" sizes="(max-width: 768px) 100vw, 50vw" alt="Top latest fashion products image">
                     <div class="pl-3">
                         <h2 class="mb-2 h6 font-weight-bold">
                             <a class="text-dark" href="./article.html">Top Latest Fashion Products You Need to Know</a>
@@ -156,9 +156,9 @@
 <!-- END FOOTER -->
 
 <!-- JAVASCRIPTS -->
-<script src="./assets/js/vendor/jquery.min.js" type="text/javascript"></script>
-<script src="./assets/js/vendor/popper.min.js" type="text/javascript"></script>
-<script src="./assets/js/vendor/bootstrap.min.js" type="text/javascript"></script>
-<script src="./assets/js/functions.js" type="text/javascript"></script>
+<script src="./assets/js/vendor/jquery.min.js" type="text/javascript" defer></script>
+<script src="./assets/js/vendor/popper.min.js" type="text/javascript" defer></script>
+<script src="./assets/js/vendor/bootstrap.min.js" type="text/javascript" defer></script>
+<script src="./assets/js/functions.js" type="text/javascript" defer></script>
 </body>
 </html>
