--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="./assets/img/favicon.ico">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Top Review | Quality Product Reviews</title>
     <meta name="description" content="Top Review provides quality and unbiased reviews of various products, backed by AI-driven research and real data." />
     <meta name="keywords" content="product reviews, top reviews, unbiased reviews, tech reviews, health product reviews" />
@@ -17,148 +18,153 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
     <!-- Main CSS -->
-    <link href="./assets/css/main.css" rel="stylesheet"/>
+    <link href="./assets/css/main.css" rel="stylesheet" />
 </head>
+
 <body>
-<!-- NAVBAR -->
-<nav class="topnav navbar navbar-expand-lg navbar-light bg-white fixed-top">
+    <!-- NAVBAR -->
+    <nav class="topnav navbar navbar-expand-lg navbar-light bg-white fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="./index.html"><strong>TopReview</strong></a>
+            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="navbarColor02">
+                <ul class="navbar-nav mr-auto d-flex align-items-center">
+                    <li class="nav-item">
+                        <a class="nav-link" href="./index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./Blog.html">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Tech</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Compared</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Health</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Collections</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./privacyPolicy.html">Privacy Policy</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ml-auto d-flex align-items-center">
+                    <li class="nav-item highlight">
+                        <a class="nav-link" href="">Learn Blogs</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- END NAVBAR -->
+
+    <!-- HEADER -->
     <div class="container">
-        <a class="navbar-brand" href="./index.html"><strong>TopReview</strong></a>
-        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="navbar-collapse collapse" id="navbarColor02">
-            <ul class="navbar-nav mr-auto d-flex align-items-center">
-                <li class="nav-item">
-                    <a class="nav-link" href="./index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./Blog.html">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="">Tech</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="">Compared</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="">Health</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="">Collections</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./privacyPolicy.html">Privacy Policy</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto d-flex align-items-center">
-                <li class="nav-item highlight">
-                    <a class="nav-link" href="">Learn Blogs</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<!-- END NAVBAR -->
-
-<!-- HEADER -->
-<div class="container">
-    <div class="jumbotron jumbotron-fluid mb-3 pt-0 pb-0 bg-lightblue position-relative">
-        <div class="pl-4 pr-0 h-100 tofront">
-            <div class="row justify-content-between">
-                <div class="col-md-6 pt-6 pb-6 align-self-center">
-                    <h1 class="secondfont mb-3 font-weight-bold">Welcome to TopReview | Quality Product Reviews</h1>
-                    <p class="mb-3">
-                        Each piece of information is gathered using the latest technologies, AI & Research. TopReview is the perfect website for the information you need.
-                    </p>
-                    <a href="./article.html" class="btn btn-dark">Read More</a>
-                </div>
-                <div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url(./assets/img/Home.jpg);" srcset="image-medium.jpg 768w, image-large.jpg 1200w" sizes="(max-width: 768px) 100vw, 50vw"  alt="TopReview homepage image">
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- END HEADER -->
-
-<!-- MAIN CONTENT -->
-<div class="container pt-4 pb-4">
-    <div class="row">
-        <div class="col-lg-6">
-            <div class="card border-0 mb-4 box-shadow h-xl-300">
-                <div style="background-image: url(./assets/img/air buds.jpg); srcset="image-medium.jpg 768w, image-large.jpg 1200w" sizes="(max-width: 768px) 100vw, 50vw" min-height: 250px; background-position: center; background-size: cover; margin-top: -5%; background-repeat: no-repeat;" alt="2024 Best AirBuds image"></div>
-                <div class="card-body px-0 pb-0 d-flex flex-column align-items-start">
-                    <h2 class="h4 font-weight-bold">
-                        <a class="text-dark" href="">2024 Best AirBuds</a>
-                    </h2>
-                    <p class="card-text">Researchers have found the best Airbuds of the year with improved sound quality and features.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-6">
-            <div class="flex-md-row mb-4 box-shadow h-xl-300">
-                <div class="mb-3 d-flex align-items-center">
-                    <img height="80" src="./assets/img/smart phone.jpg" srcset="image-medium.jpg 768w, image-large.jpg 1200w" sizes="(max-width: 768px) 100vw, 50vw" alt="2024 best Smart Phone image">
-                    <div class="pl-3">
-                        <h2 class="mb-2 h6 font-weight-bold">
-                            <a class="text-dark" href="./article.html">2024 Best Smart Phone | Mobile</a>
-                        </h2>
-                        <div class="card-text text-muted small">David Jones</div>
-                        <small class="text-muted">Aug 7 &middot; 5 min read</small>
+        <div class="jumbotron jumbotron-fluid mb-3 pt-0 pb-0 bg-lightblue position-relative">
+            <div class="pl-4 pr-0 h-100 tofront">
+                <div class="row justify-content-between">
+                    <div class="col-md-6 pt-6 pb-6 align-self-center">
+                        <h1 class="secondfont mb-3 font-weight-bold">Welcome to TopReview | Quality Product Reviews</h1>
+                        <p class="mb-3">
+                            Each piece of information is gathered using the latest technologies, AI & Research. TopReview is the perfect website for the information you need.
+                        </p>
+                        <a href="./article.html" class="btn btn-dark">Read More</a>
                     </div>
-                </div>
-                <div class="mb-3 d-flex align-items-center">
-                    <img height="80" src="./assets/img/best laptops.jpg" srcset="image-medium.jpg 768w, image-large.jpg 1200w" sizes="(max-width: 768px) 100vw, 50vw" alt="Best budget laptop image">
-                    <div class="pl-3">
-                        <h2 class="mb-2 h6 font-weight-bold">
-                            <a class="text-dark" href="./article.html">Best Budget Laptop Of The Year</a>
-                        </h2>
-                        <div class="card-text text-muted small">Mr. Rocky</div>
-                        <small class="text-muted">Sep 01 &middot; 5 min read</small>
-                    </div>
-                </div>
-                <div class="mb-3 d-flex align-items-center">
-                    <img height="80" src="./assets/img/faction.jpg" srcset="image-medium.jpg 768w, image-large.jpg 1200w" sizes="(max-width: 768px) 100vw, 50vw" alt="Top latest fashion products image">
-                    <div class="pl-3">
-                        <h2 class="mb-2 h6 font-weight-bold">
-                            <a class="text-dark" href="./article.html">Top Latest Fashion Products You Need to Know</a>
-                        </h2>
-                        <div class="card-text text-muted small">Deliana Eldric</div>
-                        <small class="text-muted">May 19 &middot; 5 min read</small>
+                    <div class="col-md-6 d-none d-md-block pr-0" style="background-image:url(./assets/img/Home.jpg); background-size:cover; background-position:center; background-repeat:no-repeat; min-height: 250px;">
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+    <!-- END HEADER -->
 
-<!-- FOOTER -->
-<div class="container mt-5">
-    <footer class="bg-white border-top p-3 text-muted small">
-        <div class="row align-items-center justify-content-between">
-            <div>
-                <span class="navbar-brand mr-2"><strong>Top Review</strong></span> Copyright &copy;
-                <script>document.write(new Date().getFullYear())</script>
-                . All rights reserved.
+    <!-- MAIN CONTENT -->
+    <div class="container pt-4 pb-4">
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="card border-0 mb-4 box-shadow h-xl-300">
+                    <div style="background-image: url(./assets/img/air buds.jpg); background-position: center; background-size: cover; min-height: 250px; background-repeat: no-repeat;" class="card-img-top" alt="2024 Best AirBuds image"></div>
+                    <div class="card-body px-0 pb-0 d-flex flex-column align-items-start">
+                        <h2 class="h4 font-weight-bold">
+                            <a class="text-dark" href="">2024 Best AirBuds</a>
+                        </h2>
+                        <p class="card-text">Researchers have found the best Airbuds of the year with improved sound quality and features.</p>
+                    </div>
+                </div>
             </div>
-            <div>
-                Based on <strong>Organic Research</strong> by Mr. Rocky.
+            <div class="col-lg-6">
+                <div class="flex-md-row mb-4 box-shadow h-xl-300">
+                    <div class="mb-3 d-flex align-items-center">
+                        <img src="./assets/img/smart phone.jpg" alt="2024 best Smart Phone image" height="80" class="img-fluid">
+                        <div class="pl-3">
+                            <h2 class="mb-2 h6 font-weight-bold">
+                                <a class="text-dark" href="./article.html">2024 Best Smart Phone | Mobile</a>
+                            </h2>
+                            <div class="card-text text-muted small">David Jones</div>
+                            <small class="text-muted">Aug 7 &middot; 5 min read</small>
+                        </div>
+                    </div>
+                    <div class="mb-3 d-flex align-items-center">
+                        <img src="./assets/img/best laptops.jpg" alt="Best budget laptop image" height="80" class="img-fluid">
+                        <div class="pl-3">
+                            <h2 class="mb-2 h6 font-weight-bold">
+                                <a class="text-dark" href="./article.html">Best Budget Laptop Of The Year</a>
+                            </h2>
+                            <div class="card-text text-muted small">Mr. Rocky</div>
+                            <small class="text-muted">Sep 01 &middot; 5 min read</small>
+                        </div>
+                    </div>
+                    <div class="mb-3 d-flex align-items-center">
+                        <img src="./assets/img/faction.jpg" alt="Top latest fashion products image" height="80" class="img-fluid">
+                        <div class="pl-3">
+                            <h2 class="mb-2 h6 font-weight-bold">
+                                <a class="text-dark" href="./article.html">Top Latest Fashion Products You Need to Know</a>
+                            </h2>
+                            <div class="card-text text-muted small">Deliana Eldric</div>
+                            <small class="text-muted">May 19 &middot; 5 min read</small>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </footer>
-</div>
-<!-- END FOOTER -->
+    </div>
+    <!-- END MAIN CONTENT -->
 
-<!-- JAVASCRIPTS -->
-<script src="./assets/js/vendor/jquery.min.js" type="text/javascript" defer></script>
-<script src="./assets/js/vendor/popper.min.js" type="text/javascript" defer></script>
-<script src="./assets/js/vendor/bootstrap.min.js" type="text/javascript" defer></script>
-<script src="./assets/js/functions.js" type="text/javascript" defer></script>
+    <!-- FOOTER -->
+    <div class="container mt-5">
+        <footer class="bg-white border-top p-3 text-muted small">
+            <div class="row align-items-center justify-content-between">
+                <div>
+                    <span class="navbar-brand mr-2"><strong>Top Review</strong></span> Copyright &copy;
+                    <script>
+                        document.write(new Date().getFullYear())
+                    </script>
+                    . All rights reserved.
+                </div>
+                <div>
+                    Based on <strong>Organic Research</strong> by Mr. Rocky.
+                </div>
+            </div>
+        </footer>
+    </div>
+    <!-- END FOOTER -->
+
+    <!-- JAVASCRIPTS -->
+    <script src="./assets/js/vendor/jquery.min.js" type="text/javascript" defer></script>
+    <script src="./assets/js/vendor/popper.min.js" type="text/javascript" defer></script>
+    <script src="./assets/js/vendor/bootstrap.min.js" type="text/javascript" defer></script>
+    <script src="./assets/js/functions.js" type="text/javascript" defer></script>
 </body>
+
 </html>
