--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         </p>
                         <a href="./article.html" class="btn btn-dark">Read More</a>
                     </div>
-                    <div class="col-md-6 d-none d-md-block pr-0" style="background-image:url(./assets/img/Home.jpg); background-size:cover; max-height:250px; background-position:center; background-repeat:no-repeat; min-height: 250px;">
+                    <div class="col-md-6 d-none d-md-block pr-0" style="background-image:url(./assets/img/Home.jpg); background-size:cover; background-position:center; background-repeat:no-repeat; min-height: 250px;">
                     </div>
                 </div>
             </div>
@@ -94,10 +94,10 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="card border-0 mb-4 box-shadow h-xl-300">
-                    <div style="background-image: url(./assets/img/air buds.jpg); background-position: center; background-size: cover; min-height: 250px; max-height:400px; background-repeat: no-repeat;" class="card-img-top" alt="2024 Best AirBuds image"></div>
+                    <div style="background-image: url(./assets/img/air buds.jpg); background-position: center; background-size: cover; min-height: 200px; background-repeat: no-repeat;" class="card-img-top" alt="2024 Best AirBuds image"></div>
                     <div class="card-body px-0 pb-0 d-flex flex-column align-items-start">
                         <h2 class="h4 font-weight-bold">
-                            <a class="text-dark" href="">2024 Best AirBuds</a>
+                            <a class="text-dark" href="#">2024 Best AirBuds</a>
                         </h2>
                         <p class="card-text">Researchers have found the best Airbuds of the year with improved sound quality and features.</p>
                     </div>
@@ -106,30 +106,30 @@
             <div class="col-lg-6">
                 <div class="flex-md-row mb-4 box-shadow h-xl-300">
                     <div class="mb-3 d-flex align-items-center">
-                        <img src="./assets/img/smart phone.jpg" max-height:250px; alt="2024 best Smart Phone image" height="80" class="img-fluid">
+                        <img src="./assets/img/smart phone.jpg" alt="2024 best Smart Phone image" height="60" class="img-fluid">
                         <div class="pl-3">
                             <h2 class="mb-2 h6 font-weight-bold">
-                                <a class="text-dark" href="./article.html">2024 Best Smart Phone | Mobile</a>
+                                <span class="text-dark">2024 Best Smart Phone | Mobile</span>
                             </h2>
                             <div class="card-text text-muted small">David Jones</div>
                             <small class="text-muted">Aug 7 &middot; 5 min read</small>
                         </div>
                     </div>
                     <div class="mb-3 d-flex align-items-center">
-                        <img src="./assets/img/best laptops.jpg" alt="Best budget laptop image" max-height:250px; height="80" class="img-fluid">
+                        <img src="./assets/img/best laptops.jpg" alt="Best budget laptop image" height="60" class="img-fluid">
                         <div class="pl-3">
                             <h2 class="mb-2 h6 font-weight-bold">
-                                <a class="text-dark" href="./article.html">Best Budget Laptop Of The Year</a>
+                                <span class="text-dark">Best Budget Laptop Of The Year</span>
                             </h2>
                             <div class="card-text text-muted small">Mr. Rocky</div>
                             <small class="text-muted">Sep 01 &middot; 5 min read</small>
                         </div>
                     </div>
                     <div class="mb-3 d-flex align-items-center">
-                        <img src="./assets/img/faction.jpg" alt="Top latest fashion products image" max-height:250px; height="80" class="img-fluid">
+                        <img src="./assets/img/faction.jpg" alt="Top latest fashion products image" height="60" class="img-fluid">
                         <div class="pl-3">
                             <h2 class="mb-2 h6 font-weight-bold">
-                                <a class="text-dark" href="./article.html">Top Latest Fashion Products You Need to Know</a>
+                                <span class="text-dark">Top Latest Fashion Products You Need to Know</span>
                             </h2>
                             <div class="card-text text-muted small">Deliana Eldric</div>
                             <small class="text-muted">May 19 &middot; 5 min read</small>
