--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </ul>
                 <ul class="navbar-nav ml-auto d-flex align-items-center">
                     <li class="nav-item highlight">
-                        <a class="nav-link" href="">Learn Blogs</a>
+                        <a class="nav-link" href="./Blog.html">Learn Blogs</a>
                     </li>
                 </ul>
             </div>
@@ -79,7 +79,7 @@
                         <p class="mb-3">
                             Each piece of information is gathered using the latest technologies, AI & Research. TopReview is the perfect website for the information you need.
                         </p>
-                        <a href="./article.html" class="btn btn-dark">Read More</a>
+                        <a href="./about.html" class="btn btn-dark">Read More</a>
                     </div>
                     <div class="col-md-6 d-none d-md-block pr-0" style="background-image:url(./assets/img/Home.jpg); background-size:cover; background-position:center; background-repeat:no-repeat; min-height: 250px;">
                     </div>
@@ -94,7 +94,8 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="card border-0 mb-4 box-shadow h-xl-300">
-                    <div style="background-image: url(./assets/img/air buds.jpg); background-position: center; background-size: cover; min-height: 200px; background-repeat: no-repeat;" class="card-img-top" alt="2024 Best AirBuds image"></div>
+                   
+                <div style="background-image: url(./assets/img/air buds.jpg); min-height: 250px; background-position: center; background-size: cover; margin-top: -5%; background-repeat: no-repeat;" alt="2024 Best AirBuds image"></div>
                     <div class="card-body px-0 pb-0 d-flex flex-column align-items-start">
                         <h2 class="h4 font-weight-bold">
                             <a class="text-dark" href="#">2024 Best AirBuds</a>
@@ -106,7 +107,7 @@
             <div class="col-lg-6">
                 <div class="flex-md-row mb-4 box-shadow h-xl-300">
                     <div class="mb-3 d-flex align-items-center">
-                        <img src="./assets/img/smart phone.jpg" alt="2024 best Smart Phone image" height="60" class="img-fluid">
+                                            <img height="80" src="./assets/img/smart phone.jpg" alt="2024 best Smart Phone image">
                         <div class="pl-3">
                             <h2 class="mb-2 h6 font-weight-bold">
                                 <span class="text-dark">2024 Best Smart Phone | Mobile</span>
@@ -116,7 +117,7 @@
                         </div>
                     </div>
                     <div class="mb-3 d-flex align-items-center">
-                        <img src="./assets/img/best laptops.jpg" alt="Best budget laptop image" height="60" class="img-fluid">
+                                            <img height="80" src="./assets/img/best laptops.jpg" alt="Best budget laptop image">
                         <div class="pl-3">
                             <h2 class="mb-2 h6 font-weight-bold">
                                 <span class="text-dark">Best Budget Laptop Of The Year</span>
@@ -126,7 +127,7 @@
                         </div>
                     </div>
                     <div class="mb-3 d-flex align-items-center">
-                        <img src="./assets/img/faction.jpg" alt="Top latest fashion products image" height="60" class="img-fluid">
+                                            <img height="80" src="./assets/img/faction.jpg" alt="Top latest fashion products image">
                         <div class="pl-3">
                             <h2 class="mb-2 h6 font-weight-bold">
                                 <span class="text-dark">Top Latest Fashion Products You Need to Know</span>
