--- a/about.html
+++ b/about.html
@@ -18,30 +18,51 @@
 <!--------------------------------------
 NAVBAR
 --------------------------------------->
-<nav class="topnav navbar navbar-expand-lg navbar-light bg-white fixed-top">
-<div class="container">
-	<a class="navbar-brand" href="./index.html"><strong>TopReview</strong></a>
-	<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-	<span class="navbar-toggler-icon"></span>
-	</button>
-	<div class="navbar-collapse collapse" id="navbarColor02" style="">
-		<ul class="navbar-nav mr-auto d-flex align-items-center">
-			<li class="nav-item">
-			<a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
-			</li>
-			<li class="nav-item">
-			<a class="nav-link" href="./articles.html">Articles</a>
-			</li>
-			<li class="nav-item">
-			<a class="nav-link" href="./about.html">About</a>
-			</li>
-			<li class="nav-item">
-			<a class="nav-link" href="./contact.html">Contact</a>
-			</li>
-		</ul>
-	</div>
-</div>
-</nav>
+
+    <nav class="topnav navbar navbar-expand-lg navbar-light bg-white fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="./index.html"><strong>TopReview</strong></a>
+            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="navbarColor02">
+                <ul class="navbar-nav mr-auto d-flex align-items-center">
+                    <li class="nav-item">
+                        <a class="nav-link" href="./index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./Blog.html">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Tech</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Compared</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Health</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Collections</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./privacyPolicy.html">Privacy Policy</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ml-auto d-flex align-items-center">
+                    <li class="nav-item highlight">
+                        <a class="nav-link" href="./Blog.html">Learn Blogs</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 <!-- End Navbar -->
 
 <!--------------------------------------
