--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
             <div class="col-lg-6">
                 <div class="card border-0 mb-4 box-shadow h-xl-300">
                    
-                <div style="background-image: url(./assets/img/air buds.jpg); min-height: 250px; background-position: center; background-size: cover; margin-top: -5%; background-repeat: no-repeat;" alt="2024 Best AirBuds image"></div>
+                <div style="background-image: url(./assets/img/iphone 15 pro max.jpg); min-height: 250px; background-position: center; background-size: cover; margin-top: -5%; background-repeat: no-repeat;" alt="2024 Best AirBuds image"></div>
                     <div class="card-body px-0 pb-0 d-flex flex-column align-items-start">
                         <h2 class="h4 font-weight-bold">
-                            <a class="text-dark" href="#">2024 Best AirBuds</a>
+                            <a class="text-dark" href="#">Iphone 15 Pro MAX Full Revie & Price</a>
                         </h2>
-                        <p class="card-text">Researchers have found the best Airbuds of the year with improved sound quality and features.</p>
+                        <p class="card-text">The Apple iPhone 15 Pro Max sets a new standard in smartphone technology, featuring a powerful A14 Bionic chip, a stunning 6.7-inch OLED display, and a top-tier camera system with a 108MP main sensor.</p>
                     </div>
                 </div>
             </div>
