Update Apple Iphone 15 Pro MAX | Specifications & Prices.html

--- a/blogs/Apple Iphone 15 Pro MAX | Specifications & Prices.html
+++ b/blogs/Apple Iphone 15 Pro MAX | Specifications & Prices.html
@@ -32,10 +32,10 @@
             <div class="navbar-collapse collapse" id="navbarColor02">
                 <ul class="navbar-nav mr-auto d-flex align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="./index.html">Home</a>
+                        <a class="nav-link" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Blog.html">Blog</a>
+                        <a class="nav-link" href="../Blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="">Tech</a>
@@ -50,18 +50,18 @@
                         <a class="nav-link" href="">Collections</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./about.html">About Us</a>
+                        <a class="nav-link" href="../about.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./contact.html">Contact Us</a>
+                        <a class="nav-link" href="../contact.html">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./privacyPolicy.html">Privacy Policy</a>
+                        <a class="nav-link" href="../privacyPolicy.html">Privacy Policy</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto d-flex align-items-center">
                     <li class="nav-item highlight">
-                        <a class="nav-link" href="./Blog.html">Learn Blogs</a>
+                        <a class="nav-link" href="../Blog.html">Learn Blogs</a>
                     </li>
                 </ul>
             </div>
@@ -81,7 +81,7 @@
                         </p>
                         <a href="./about.html" class="btn btn-dark">Read More</a>
                     </div>
-                    <div class="col-md-6 d-none d-md-block pr-0" style="background-image:url(./assets/img/Home.jpg); background-size:cover; background-position:center; background-repeat:no-repeat; min-height: 250px;">
+                    <div class="col-md-6 d-none d-md-block pr-0" style="background-image:url(../assets/img/Home.jpg); background-size:cover; background-position:center; background-repeat:no-repeat; min-height: 250px;">
                     </div>
                 </div>
             </div>
@@ -158,10 +158,10 @@
     <!-- END FOOTER -->
 
     <!-- JAVASCRIPTS -->
-    <script src="./assets/js/vendor/jquery.min.js" type="text/javascript" defer></script>
-    <script src="./assets/js/vendor/popper.min.js" type="text/javascript" defer></script>
-    <script src="./assets/js/vendor/bootstrap.min.js" type="text/javascript" defer></script>
-    <script src="./assets/js/functions.js" type="text/javascript" defer></script>
+    <script src="../assets/js/vendor/jquery.min.js" type="text/javascript" defer></script>
+    <script src="../assets/js/vendor/popper.min.js" type="text/javascript" defer></script>
+    <script src="../assets/js/vendor/bootstrap.min.js" type="text/javascript" defer></script>
+    <script src="../assets/js/functions.js" type="text/javascript" defer></script>
 </body>
 
 </html>
