Update Apple iPhone 15 Pro Max Phone Specifications And Prices.html

--- a/blogs/Apple iPhone 15 Pro Max Phone Specifications And Prices.html
+++ b/blogs/Apple iPhone 15 Pro Max Phone Specifications And Prices.html
@@ -61,7 +61,7 @@
                 </ul>
                 <ul class="navbar-nav ml-auto d-flex align-items-center">
                     <li class="nav-item highlight">
-                        <a class="nav-link" href="../Blog.html">Learn Blogs</a>
+                        <a class="nav-link" href="../Blog.html">Read Blogs</a>
                     </li>
                 </ul>
             </div>
@@ -75,11 +75,10 @@
             <div class="pl-4 pr-0 h-100 tofront">
                 <div class="row justify-content-between">
                     <div class="col-md-6 pt-6 pb-6 align-self-center">
-                        <h1 class="secondfont mb-3 font-weight-bold">Welcome to TopReview | Quality Product Reviews</h1>
+                        <h1 class="secondfont mb-3 font-weight-bold">Apple iPhone 15 Pro Max Phone Specifications And Prices</h1>
                         <p class="mb-3">
-                            Each piece of information is gathered using the latest technologies, AI & Research. TopReview is the perfect website for the information you need.
+                            The Apple iPhone 15 Pro Max sets a new standard in smartphone technology.
                         </p>
-                        <a href="../about.html" class="btn btn-dark">Read More</a>
                     </div>
                     <div class="col-md-6 d-none d-md-block pr-0" style="background-image:url(../assets/img/iphone 15 pro max.jpg); background-size:cover; background-position:center; background-repeat:no-repeat; min-height: 250px;">
                     </div>
@@ -120,8 +119,9 @@ Experience true luxury and unparalleled performance with the Apple iPhone 15 Pro
                         <p>At the heart of the Apple iPhone 15 Pro Max lies the powerful A14 Bionic chip, the latest and greatest processor from Apple. This cutting-edge chipset delivers unparalleled performance, offering lightning-fast processing speeds and seamless multitasking capabilities.</p>
                         <p>The A14 Bionic chip is built on a 5nm process, allowing for a significant increase in transistor density and power efficiency. This translates to improved overall performance, with the chip delivering up to 40% faster CPU performance and 30% faster graphics processing compared to the previous generation.</p>
                         <p>In terms of storage options, the iPhone 15 Pro Max offers a range of choices to suit the needs of various users. The base model comes with 128GB of internal storage, while higher-end configurations offer 256GB, 512GB, and even 1TB of storage space. This ample storage capacity ensures that users can store their vast collection of photos, videos, apps, and files without worrying about running out of space.</p>
+                        <div class="col-md-6 d-none d-md-block pr-0" style="background-image:url(../assets/img/iphone 15 pro max unboxing.jpg); background-size:cover; background-position:center; background-repeat:no-repeat; min-height: 250px;">
                     </section>
-<div class="col-md-6 d-none d-md-block pr-0" style="background-image:url(../assets/img/iphone 15 pro max unboxing.jpg); background-size:cover; background-position:center; background-repeat:no-repeat; min-height: 250px;">
+
                     <section>
                         <h2 class="h3 font-weight-bold">Camera capabilities of the Apple iPhone 15 Pro Max</h2>
                         <p>The Apple iPhone 15 Pro Max boasts an advanced triple-lens camera system that redefines mobile photography. The primary camera features a massive 108MP sensor, allowing users to capture stunning, high-resolution images with exceptional detail and clarity.</p>
