--- a/Blog.html
+++ b/Blog.html
@@ -95,8 +95,8 @@ MAIN
 				<img src="./assets/img/iphone 15 pro max.jpg" class="card-img-top" alt="Blog Post 1">
 				<div class="card-body">
 					<h5 class="card-title">Apple Iphone 15 Pro Max Full review And Pric</h5>
-					<p class="card-text">The Apple iPhone 15 Pro Max sets a new standard in smartphone technology, featuring a powerful A14 Bionic chip, a stunning 6.7-inch OLED display, and a top-tier camera system with a 108MP main sensor. With sleek design options and storage up to 1TB, the device offers exceptional performance for both everyday users and professionals.</p>
-					<a href="./blogs/Apple Iphone 15 Pro MAX | Specifications & Prices.html" class="btn btn-primary">Read More</a>
+					<p class="card-text">The Apple iPhone 15 Pro Max sets a new standard in smartphone technology, featuring a powerful A14 Bionic chip.</p>
+					<a href="./blogs/Apple Iphone 15 Pro Max Phone Specifications And Prices.html" class="btn btn-primary">Read More</a>
 				</div>
 			</div>
 		</div>
