--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div style="background-image: url(./assets/img/iphone 15 pro max.jpg); height: 100%; min-height: 250px; background-position: center; background-size: cover; margin-top: -5%; background-repeat: no-repeat;" alt="2024 Best AirBuds image"></div>
                     <div class="card-body px-0 pb-0 d-flex flex-column align-items-start">
                         <h2 class="h4 font-weight-bold">
-                            <a class="text-dark" href="./blogs/Apple Iphone 15 Pro Max Phone Specifications And Prices">Iphone 15 Pro MAX Full Review & Prices</a>
+                            <a class="text-dark" href="./blogs/Apple iPhone 15 Pro Max Phone Specifications And Prices">Iphone 15 Pro MAX Full Review & Prices</a>
                         </h2>
                         <p class="card-text">The Apple iPhone 15 Pro Max sets a new standard in smartphone technology, featuring a powerful A14 Bionic chip, a stunning 6.7-inch OLED display, and a top-tier camera system with a 108MP main sensor.</p>
                     </div>
