--- a/Blog.html
+++ b/Blog.html
@@ -96,7 +96,7 @@ MAIN
 				<div class="card-body">
 					<h5 class="card-title">Apple Iphone 15 Pro Max Full review And Pric</h5>
 					<p class="card-text">The Apple iPhone 15 Pro Max sets a new standard in smartphone technology, featuring a powerful A14 Bionic chip.</p>
-					<a href="./blogs/Apple Iphone 15 Pro Max Phone Specifications And Prices.html" class="btn btn-primary">Read More</a>
+					<a href="./blogs/Apple iPhone 15 Pro Max Phone Specifications And Prices.html" class="btn btn-primary">Read More</a>
 				</div>
 			</div>
 		</div>
