--- a/index.html
+++ b/index.html
@@ -38,18 +38,6 @@
                         <a class="nav-link" href="./Blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Tech</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Compared</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Health</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Collections</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="./about.html">About Us</a>
                     </li>
                     <li class="nav-item">
@@ -61,7 +49,7 @@
                 </ul>
                 <ul class="navbar-nav ml-auto d-flex align-items-center">
                     <li class="nav-item highlight">
-                        <a class="nav-link" href="./Blog.html">Learn Blogs</a>
+                        <a class="nav-link" href="./Blog.html">Read Blogs</a>
                     </li>
                 </ul>
             </div>
