--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="./assets/img/favicon.ico">
+    <link rel="icon" type="image/png" href="./assets/img/topReview favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Top Review | Quality Product Reviews</title>
     <meta name="description" content="Top Review provides quality and unbiased reviews of various products, backed by AI-driven research and real data." />
