--- a/Blog.html
+++ b/Blog.html
@@ -93,9 +93,9 @@ MAIN
 			<div class="card border-0 box-shadow">
 				<img src="./assets/img/blog2.jpg" class="card-img-top" alt="Blog Post 2">
 				<div class="card-body">
-					<h5 class="card-title">Blog Post Title 2</h5>
-					<p class="card-text">This is a brief description of the second blog post. It covers the main points and gives a preview of what the post is about.</p>
-					<a href="./blog-post2.html" class="btn btn-primary">Read More</a>
+					<h5 class="card-title">Best Gaming Laptop 2024</h5>
+					<p class="card-text">Discover the top gaming laptops of 2024 with our comprehensive guide. Compare specs, performance, and prices to find the best gaming laptop for your needs and budget.</p>
+					<a href="./blogs/Best Gaming Laptop 2024.html" class="btn btn-primary">Read More</a>
 				</div>
 			</div>
 		</div>
