--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
             <div class="col-lg-6">
                 <div class="flex-md-row mb-4 box-shadow h-xl-300">
                     <div class="mb-3 d-flex align-items-center">
-                                            <img height="80" src="./assets/img/smart phone.jpg" alt="2024 best Smart Phone image">
+                                            <img href="./blogs/Best Gaming Laptop 2024.html" height="80" src="../assets/img/top%20review%20best%20gaming%20laptop%20image.jpg" alt="2024 best gaming laptop image">
                         <div class="pl-3">
-                            <h2 class="mb-2 h6 font-weight-bold">
-                                <span class="text-dark">2024 Best Smart Phone | Mobile</span>
+                            <h2 href="./blogs/Best Gaming Laptop 2024.html" class="mb-2 h6 font-weight-bold">
+                                <span class="text-dark">Best Gaming Laptop 2024</span>
                             </h2>
                             <div class="card-text text-muted small">David Jones</div>
                             <small class="text-muted">Aug 7 &middot; 5 min read</small>
