--- a/Blog.html
+++ b/Blog.html
@@ -91,7 +91,7 @@ MAIN
 		<!-- Blog Post 2 -->
 		<div class="col-md-4 mb-4">
 			<div class="card border-0 box-shadow">
-				<img src="./assets/img/blog2.jpg" class="card-img-top" alt="Blog Post 2">
+				<img src="./assets/img/BestGaming.jpg" class="card-img-top" alt="Best Gaming laptop image">
 				<div class="card-body">
 					<h5 class="card-title">Best Gaming Laptop 2024</h5>
 					<p class="card-text">Discover the top gaming laptops of 2024 with our comprehensive guide. Compare specs, performance, and prices to find the best gaming laptop for your needs and budget.</p>
