--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <!-- Main CSS -->
     <link href="./assets/css/main.css" rel="stylesheet" />
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3355297884222438"
+     crossorigin="anonymous"></script>
+
+    
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-GQRP6N000H"></script>
 <script>
