--- a/Blog.html
+++ b/Blog.html
@@ -13,6 +13,8 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 <!-- Main CSS -->
 <link href="./assets/css/main.css" rel="stylesheet"/>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3355297884222438"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 <!--------------------------------------
